--- a/.github/workflows/routine-tests.yml
+++ b/.github/workflows/routine-tests.yml
@@ -35,3 +35,4 @@ jobs:
           # Windows unable to pass test_normalway
           poetry run pytest -k "test_version or hardway or sync_browser"
           # poetry run pytest
+          sh run-pytest.sh
