Update windows removed from routinetest.yml poetry run sh run-pytest.sh

--- a/.github/workflows/routine-tests.yml
+++ b/.github/workflows/routine-tests.yml
@@ -36,4 +36,4 @@ jobs:
           # Windows unable to pass test_normalway
           poetry run pytest -k "test_version or hardway or sync_browser"
           # poetry run pytest
-          sh run-pytest.sh
+          poetry run sh run-pytest.sh
