--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "get-pwbrowser-sync"
-version = "0.1.0-alpha.2"
+version = "0.1.0-alpha.3"
 description = "Instantiate a playwright chromium (sync as opposed to async) browser"
-authors = ["freemt"]
+authors = ["ffreemt"]
 readme = "README.md"
 repository = "https://github.com/ffreemt/get-pwbrowser-sync"
 
