Update switch to firefox

--- a/.github/workflows/routine-tests.yml
+++ b/.github/workflows/routine-tests.yml
@@ -34,6 +34,6 @@ jobs:
         run: |
           # poetry run pytest -k "test_version or normalway or hardway"
           # Windows unable to pass test_normalway
-          poetry run pytest -k "test_version or hardway or sync_browser"
-          # poetry run pytest
-          poetry run sh run-pytest.sh
+          # poetry run pytest -k "test_version or hardway or sync_browser"
+          poetry run pytest tests
+          # poetry run sh run-pytest.sh
